backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: crud
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
