ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
  namespace: crud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "www.prabinpaudel.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client 
            port:
              number: 3000
